Added Canvas and some basic UI for Money Display.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /[Aa]ssets/resource_default/
 /[Aa]ssets/Icons UI/
 /[Aa]ssets/Models/
+/[Aa]ssets/TextMesh Pro/
 /[Aa]ssets/Materials/
 /Packages/
 
